# biosdevname

./: .gitignore  60-bios_dev_name.rules.in  AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  TODO  aclocal.m4  autogen.sh  bios_dev_name.spec  biosdevname.1  biosdevname.rules.in  biosdevname.spec  biosdevname.spec.fedora  biosdevname.spec.fedora.in  biosdevname.spec.suse  biosdevname.spec.suse.in  config.h.in  configure  configure.ac  make_release.sh  make_test_release.sh  netdevice  pslots.sh
debian/: NEWS  README.Debian  README.source  biosdevname-udeb.install  biosdevname.install  biosdevname.postinst  changelog  control  copyright  gbp.conf  initramfs.hook  rules  watch
debian/base-installer.d/: 10biosdevname
debian/patches/: series  smbios-2.6-check.patch
distro-patches/sles10/: rename_netiface.patch
pkg/debian/: README.debian  biosdevname.install  biosdevname.manpages  changelog  control  copyright  dirs  rules
src/: Makefile.am  Makefile.in  bios_dev_name.c  bios_dev_name.h  bios_dev_name.h.in  bios_device.c  bios_device.h  cistpl.h  eths.c  eths.h  ethtool-copy.h  ethtool-util.h  libbiosdevname.h  list.h  naming_policy.c  naming_policy.h  parse_cis.c  pci.c  pci.h  pcmcia.c  pcmcia.h  pirq.c  pirq.h  read-cis.c  read_proc.c  state.h  sysfs.c  sysfs.h  version.h.in
src/dmidecode/: CHANGELOG  Makefile  dmidecode.c  dmidecode.h  dmioem.c  dmioem.h  types.h  util.c  util.h
testcase/: testcode.c
testcase/1/: biosdecode.txt  dmidecode.txt  lspci.txt
testcase/2/: biosdecode.txt  dmidecode.txt  lspci.txt
testcase/T3andCX2/: biosdevname-d.txt  dmidecode.txt  lspci.txt
testcase/T4andCX3/: biosdevname-d.txt  dmidecode.txt  lspci.txt
testcase/hp/: biosdecode.txt  dmidecode.txt  lspci.txt
testcase/hp2/: biosdecode.txt  biosdevname.txt  dmidecode.txt  lspci.txt
testcase/m610/: biosdecode.txt  dmidecode.txt  lspci.txt
testcase/m915/: biosdecode.txt  dmidecode.txt  lspci.txt
testcase/multislot/: lspci.txt
testcase/opti755/: biosdecode.txt  dmidecode.txt  lspci.txt  netdev.txt
testcase/pe1955/: biosdecode.txt  dmidecode.txt  lspci.txt
testcase/r810/: biosdecode.txt  dmidecode.txt  lspci.txt
testcase/r815/: biosdecode.txt  dmidecode.txt  lspci.txt
testcase/r820/: biosdecode.txt  dmidecode.txt  lspci.txt
testcase/r905/: biosdecode.txt  dmidecode.txt  lspci.txt
